fix window maximizing/resizing and visual corruption on resize. only report native size events, don't kick off a nested resize. b=396345 r=bent sr=roc a=roc